<resources>
    <string name="app_name">RUPizzeria-APP_Project4</string>
    <string name="orders_button">Order Now!!</string>
    <string name="order_history_button">Previous Orders</string>
    <string name="new_york_pizza">New York Pizza</string>
    <string name="chicago_pizza">Chicago Pizza</string>
    <string name="pizzeria_name">RUPizzeria</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add_to_cart_button">Add to Cart!!</string>
    <string name="back_button">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_york_pizza_gallery">New York Pizza Options!</string>
    <string name="new_york_deluxe">New York Deluxe Pizza</string>
    <string name="new_york_meatzza">New York Meatzza Pizza</string>
    <string name="new_york_bbq">New York BBQ Chicken Pizza</string>
    <string name="new_york_buildyourown">New York Build Your Own Pizza</string>
    <string name="chicago_deluxe">Chicago Deluxe Pizza</string>
    <string name="chicago_meatzza">Chicago Meatzza Pizza</string>
    <string name="chicago_bbq">Chicago BBQ Chicken Pizza</string>
    <string name="chicago_buildyourown">Chicago Build Your Own Pizza</string>
    <string name="temp_Pizza_name">New York Deluxe Pizza</string>
    <string name="temp_crust_name">Thin</string>
    <string name="crust_Brooklyn">Brooklyn</string>
    <string name="crust_Thin">Thin</string>
    <string name="crust_HandTossed">Hand-tossed</string>
    <string name="crust_DeepDish">Deep Dish</string>
    <string name="crust_Pan">Pan</string>
    <string name="crust_Stuffed">Stuffed</string>
    <string name="crust_text">Crust: </string>
    <string name="toppings_BBQChicken">BBQChicken</string>
    <string name="toppings_Provolone">Provolone</string>
    <string name="toppings_Cheddar">Cheddar</string>
    <string name="toppings_Beef">Beef</string>
    <string name="toppings_Ham">Ham</string>
    <string name="toppings_Sausage">Sausage</string>
    <string name="toppings_Pepperoni">Pepperoni</string>
    <string name="toppings_GreenPeppers">GreenPeppers</string>
    <string name="toppings_Onions">Onions</string>
    <string name="toppings_Mushrooms">Mushrooms</string>
    <string name="pizza_price">Pizza Price $</string>
    <string name="default_price">$0.00</string>
    <string name="pizzaSize_small">Small</string>
    <string name="pizzaSize_medium">Medium</string>
    <string name="pizzaSize_large">Large</string>
    <string name="pizzaSize_text">Pizza Size: </string>
    <string name="Subtotal_text">Subtotal: $</string>
    <string name="Tax_text">Sales Tax: $</string>
    <string name="Total_text">Order Total: $</string>
    <string name="order_button">Place order!!</string>
    <string name="remove_Pizza_text">Remove Pizza</string>
    <string name="order_number">Order Number: </string>
    <string name="toppings_text">Toppings: </string>
    <string name="place_order">Place Order</string>
    <string name="clear_pizzas">Clear All Pizzas</string>
    <string name="default_order_value">Order#\n0</string>
    <string name="salestax_text">Sales Tax: $</string>
    <string name="ordertotal_text">Order Total: $</string>
    <string name="orderhistory_text">Order History</string>
    <string name="pizza_image_description">Image of a Pizza</string>
    <string name="pizza_type_text">Pizza Type</string>
    <string name="helper_text_hint">(Tap Here to Remove an Order)</string>
    <string name="helper_text_hint2">(Tap on a Pizza to remove it)</string>
    <string name="empty_space_value"> </string>
    <string name="price_text">Price: </string>

    <array name="pizzaSizes">
        <item>@string/pizzaSize_small</item>
        <item>@string/pizzaSize_medium</item>
        <item>@string/pizzaSize_large</item>
    </array>
    <array name="newYork_pizzaTypes">
        <item>@string/new_york_deluxe</item>
        <item>@string/new_york_meatzza</item>
        <item>@string/new_york_bbq</item>
        <item>@string/new_york_buildyourown</item>
    </array>
    <array name="chicago_pizzaTypes">
        <item>@string/chicago_deluxe</item>
        <item>@string/chicago_meatzza</item>
        <item>@string/chicago_bbq</item>
        <item>@string/chicago_buildyourown</item>
    </array>
</resources>