<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivityController">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainMenuToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_red"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainMenuToolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/shopping_cart"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button"
            tools:layout_editor_absoluteX="341dp" />
        <TextView
            android:id="@+id/textview_order_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:text="@string/default_order_value"
            android:textAlignment="center"
            android:textSize="25sp"
            tools:ignore="RtlCompat" />

    </androidx.appcompat.widget.Toolbar>



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/extraOptionsToolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:background="#80FF0000"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/place_orders_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="40dp"
            android:backgroundTint="@color/button_red"
            android:text="@string/place_order" />

        <Button
            android:id="@+id/clear_pizzas_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/button_red"
            android:text="@string/clear_pizzas" />
    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/listview_pizzaList"
        android:layout_width="match_parent"
        android:layout_height="655dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/extraOptionsToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuToolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>