<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newyorkPizzaGallery">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WOOOOOOOAH"
        android:textSize="42sp"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HOW THE HELL!?"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <ImageButton
        android:id="@+id/newyork_DeluxeImageButton"
        android:layout_width="167dp"
        android:layout_height="176dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/new_york_deluxe"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/newyork_MeatzzaImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/newyorkstyle_deluxe" />

    <ImageButton
        android:id="@+id/newyork_BBQImageButton"
        android:contentDescription="@string/new_york_bbq"
        android:layout_width="176dp"
        android:layout_height="157dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newyork_MeatzzaImageButton"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/newyorkstyle_bbqchicken" />

    <ImageButton
        android:id="@+id/newyork_BuildYourOwnImageButton"
        android:contentDescription="@string/new_york_buildyourown"
        android:layout_width="169dp"
        android:layout_height="153dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="240dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newyork_BBQImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/newyorkstyle_buildyourown" />

    <ImageButton
        android:id="@+id/newyork_MeatzzaImageButton"
        android:contentDescription="@string/new_york_meatzza"
        android:layout_width="179dp"
        android:layout_height="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newyork_DeluxeImageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/newyorkstylemeatzza" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="21dp"
        android:text="@string/new_york_pizza_gallery"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/newyork_MeatzzaImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>